# artwork-tui

./: .gitignore  .mise.toml  PKGBUILD  PKGBUILD.rb  PKGBUILD.sh  biome.json  install.sh  pkgbuild.rb  pkgbuild.sh  pyproject.py  pyproject.toml  qproject.sh  readme.md  tsconfig.json  uread.xlsx
Assets/: build.js  build.json  model.html  model.js  script.js  scripts.js  style.css  style.tcss
Backend/: __init__.py  _effect.py  _effect_.py  _effects.py  _others.py  app.py  bindings.py  build.py  builds.py  chromium.py  containers.py  data_img.py  data_table.py  directory_tree.py  filter_2.py  helper.py  helpers.py  imageTab.py  main_0.py  main_1.py  main_2.py  main_3.py  model.py  models.py  script.py  scripts.py  selectionlist.py  sparkline.py  storage.py  style.py  table.py  test_select.py
Fontend/: build.html  build.js  build.json  build.tcss  build.xlsx  model.html  model.js  model.json  script-0.js  script-old.js  script.js  scripts.js  style.css  style.tcss  styles.css  styles.js
Formula/: tap.rb
backend/: _effect.py  _effects.py  app.py  directory.py  selectionlist.py  storage.py  table.py
frontend/: build.json  scripts.js  style.css
