[project]
name = "artwork-tui"
version = "1.0.0"
description = "artwork generator"
license = { file = "LICENSE" }
authors = [{ name = "Andri Berger" }]
requires-python = ">=3.14"
dependencies = [
    "watchfiles",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "playwright>=1.58.0",
    "textual>=8.0.0",
    "textual-image>=0.8.5"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "textual-dev>=1.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "Asset",
    "Assets",
    "Backend",
    "pyproject.py"]

[project.scripts]
artwork-tui ="pyproject:pyproject"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]     # error, pyflakes, isort
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]



