[project]
version = "1.0.0"
name = "artwork-tui"
description = "artwork generator"
license = { file = "LICENSE" }
authors = [{ name = "Andri Berger" }]
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "opencv-python",
    "playwright",
    "textual",
    "textual-image"]

[dependency-groups]
dev = [
    "ruff",
    "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "Backend",
    "pyproject.py"]

[project.scripts]
artwork-tui ="pyproject:pyproject"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]
