[project]
version = "1.0.0"
name = "artwork-tui"
description = "artwork generator"
license = { file = "LICENSE" }
authors = [{ name = "Andri Berger" }]
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "opencv-python",
    "playwright",
    "textual",
    "textual-image"]

[dependency-groups]
dev = [
    "ruff",
    "textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "Backend",
    "pyproject.py"]

[project.scripts]
artwork-tui ="pyproject:pyproject"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 50
target-version = "py314"
